--- a/CourseMate/Views/Shared/_Layout.cshtml
+++ b/CourseMate/Views/Shared/_Layout.cshtml
@@ -95,11 +95,11 @@
             padding: 120px 20px 40px;
             width: calc(100% - 250px);
             display: flex;
-            justify-content: center;
+            @* justify-content: center; *@
             align-items: center;
             flex-direction: column;
             min-height: calc(100vh - 140px);
-            text-align: center;
+            @* text-align: center; *@
             flex: 1 0 auto;
             transition: margin-left 0.3s ease;
         }
