--- a/CourseMate/Views/Post/Create.cshtml
+++ b/CourseMate/Views/Post/Create.cshtml
@@ -713,7 +713,7 @@
                             <span asp-validation-for="Title" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="Content">Text (optional)</label>
+                            <label asp-for="Content">Content</label>
                             <textarea asp-for="Content" class="form-control" placeholder="Add more details, ask questions, or share your thoughts"></textarea>
                             <span asp-validation-for="Content" class="text-danger"></span>
                         </div>
